/// Represents the [numberOfBuilds] on specified [date].
class BuildNumberMetric {
  final DateTime date;
  final int numberOfBuilds;

  BuildNumberMetric({
    this.date,
    this.numberOfBuilds,
  });
}
